# neo_cpp

./: .clang-format  .clang-format-ignore  .clang-tidy  .cursorignore  .gitignore  .gitlab-ci.yml  .gitmodules  .production-check-ignore  .production-check-whitelist  .production-ready  .production-validation-summary.json  ACTION_PLAN.md  AUTOMATIC_RELEASE_SUCCESS.md  BUILD_COMMANDS.md  BUILD_STATUS.md  CHANGELOG.md  CLEANUP_REPORT.md  CMAKE_MAKEFILE_INTEGRATION.md  CMakeLists.txt  CMakeLists_debug.txt  CMakeLists_nodes.txt  CMakePresets.json  CODE_ANALYSIS_REPORT_2025.md  CODE_ANALYSIS_UPDATE.md  COMMIT_LOG.md  COMPLETE_NEO_CPP_NODE_SUCCESS.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_MODULE_ANALYSIS.md  COMPREHENSIVE_PRODUCTION_FIXES.md  COMPREHENSIVE_TEST_RESULTS.md  CONTRIBUTING.md  CONVERSION_CHECKLIST.md  CORRECTNESS_VERIFICATION.md  CS_TO_CPP_TEST_CONVERSION_COMPLETE.md  DEDUPLICATION_COMPLETE.md  DEDUPLICATION_REPORT.md  DEPLOYMENT.md  DETAILED_TASKS.md  DEVELOPMENT_GUIDE.md  Dockerfile  (+252 more)
apps/: CMakeLists.txt  core_demo.cpp  neo_functional_node.cpp  neo_node.cpp  neo_node_complete.cpp  neo_node_fixed.cpp  neo_node_full.cpp  neo_node_minimal.cpp  neo_node_production.cpp  neo_node_production_ready.cpp  neo_node_safe.cpp  neo_testnet_complete.cpp  neo_testnet_node.cpp  neo_testnet_standalone.cpp  simple_neo_node.cpp  test_bls12_381.cpp  test_simple_node.cpp  working_neo_node.cpp
apps/cli/: CMakeLists.txt  README.md  main.cpp  main_service.cpp  main_service.h
apps/neo-cli/: CMakeLists.txt  cli_service.cpp  cli_service.h  cli_service_production.cpp  main.cpp
apps/node/: CMakeLists.txt  config.json  main.cpp
benchmarks/: CMakeLists.txt  benchmark_suite.cpp
examples/: CMakeLists.txt  README.md  crypto_comprehensive_test.cpp  crypto_comprehensive_test_improved.cpp  crypto_test.cpp  event_system_usage.cpp  gtest_example.cpp  io_comprehensive_test.cpp  io_comprehensive_test_improved.cpp  io_test.cpp  ledger_comprehensive_test.cpp  monitoring_example.cpp  network_comprehensive_test.cpp  vm_comprehensive_test.cpp  vm_lte_gte_test.cpp  vm_test.cpp
examples/consensus/: consensus_example.cpp
examples/ledger/: ledger_example.cpp
examples/network/: network_example.cpp
examples/smartcontract/: smartcontract_example.cpp
examples/vm/: vm_example.cpp
plugins/applicationlogs/: CMakeLists.txt
plugins/dbft/: CMakeLists.txt
plugins/rpcserver/: CMakeLists.txt
sdk/: CMakeLists.txt  README.md  SDK_EXAMPLES.md
sdk/cmake/: neo-sdk-config.cmake.in
sdk/examples/: CMakeLists.txt  complete_sdk_example.cpp  simple_example.cpp  transaction_example.cpp  wallet_example.cpp
sdk/src/: nep17_token.cpp  rpc_client.cpp  sdk.cpp  transaction_manager.cpp  wallet_manager.cpp
sdk/tests/: CMakeLists.txt  test_core_types.cpp  test_main.cpp  test_nep17_token.cpp  test_rpc_client.cpp  test_transaction_manager.cpp  test_wallet.cpp
src/: CMakeLists.txt  hardfork.cpp  protocol_settings.cpp  protocol_settings_json.cpp  settings.cpp
src/blockchain/: CMakeLists.txt  header.cpp
src/cli/: CMakeLists.txt  base_commands.cpp  blockchain_commands.cpp  blockchain_import_commands.cpp  cli.cpp  console_helper.cpp  contract_commands.cpp  main_service.cpp  main_service_blockchain.cpp  main_service_node.cpp  main_service_wallet.cpp  node_commands.cpp  safe_type_converters.cpp  transaction_commands.cpp  type_converters.cpp  wallet_commands.cpp  wallet_service_commands.cpp
src/consensus/: CMakeLists.txt  change_view.cpp  change_view_message.cpp  commit.cpp  commit_message.cpp  consensus_block_processing.cpp  consensus_context.cpp  consensus_message.cpp  consensus_message_handlers.cpp  consensus_message_senders.cpp  consensus_payload_helper.cpp  consensus_service.cpp  consensus_state.cpp  dbft_consensus.cpp  prepare_request.cpp  prepare_response.cpp  recovery_message.cpp  recovery_message_stub.cpp  recovery_request.cpp
src/console_service/: CMakeLists.txt  command_quote_token.cpp  command_space_token.cpp  command_string_token.cpp  command_token.cpp  console_color_set.cpp  console_command_attribute.cpp  console_command_method.cpp  console_helper.cpp  console_service_base.cpp  service_proxy.cpp  service_proxy_handlers.cpp
src/core/: CMakeLists.txt  big_decimal.cpp  common_logging.cpp  configuration_manager.cpp  error_handling_example.cpp  error_recovery.cpp  exceptions.cpp  fixed8.cpp  logging.cpp  memory_pool.cpp  neo_system.cpp  neo_system_factory.cpp  neo_system_simple.cpp  network_stubs.cpp  performance_config.cpp  protocol_settings.cpp  string_intern.cpp  validation.cpp
src/cryptography/: CMakeLists.txt  base58.cpp  base64.cpp  base64url.cpp  bls12_381.cpp  bls12_381_complete.cpp  crypto.cpp  crypto_modern.cpp  crypto_neo_signatures.cpp  crypto_wrappers.cpp  ecc.cpp  ecrecover.cpp  ed25519.cpp  hash.cpp  keccak256.cpp  keccak256_simple.cpp  lz4.cpp  merkletree.cpp  murmur3.cpp  murmur32.cpp  ripemd160.cpp  scrypt.cpp  sha256.cpp
src/extensions/: CMakeLists.txt  assembly_extensions.cpp  base64.cpp  biginteger_extensions.cpp  byte_array_comparer.cpp  byte_array_equality_comparer.cpp  byte_extensions.cpp  collection_extensions.cpp  datetime_extensions.cpp  hashset_extensions.cpp  integer_extensions.cpp  ipaddress_extensions.cpp  random_extensions.cpp  secure_string_extensions.cpp  string_extensions.cpp  utility.cpp
src/io/: CMakeLists.txt  binary_reader.cpp  binary_writer.cpp  byte_span.cpp  byte_span_fix.patch  byte_string.cpp  byte_vector.cpp  byte_vector_fix.patch  fixed8.cpp  ijson_serializable.cpp  iserializable.cpp  json_reader.cpp  json_writer.cpp  lru_cache.cpp  memory_stream.cpp  uint160.cpp  uint256.cpp  uint_fix.patch
src/json/: CMakeLists.txt  jarray.cpp  jboolean.cpp  jnumber.cpp  jobject.cpp  jstring.cpp  jtoken.cpp  ordered_dictionary.cpp
src/ledger/: CMakeLists.txt  block.cpp  block_header.cpp  block_json.cpp  (+38 more)
tests/: CMakeLists.txt  comprehensive_test_runner.cpp  network_compatibility.cpp  simple_unit_test  simple_unit_test.cpp  standalone_le_ge_test.cpp  standalone_lte_gte_test.cpp  test_crypto_simple.cpp  test_vm_simple.cpp
tools/: CMakeLists.txt  test_rpc_server.cpp
(+19387 files in other folders)
